# rucket

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  cliff.toml  clippy.toml  codecov.yml  deny.toml  lefthook.yml  release-plz.toml  rucket.sample.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  prepare-release.yml  release-plz.yml  release.yml  s3-compat.yml  security.yml  tag-release.yml
crates/rucket/: Cargo.toml
crates/rucket-api/: Cargo.toml
crates/rucket-api/src/: error.rs  lib.rs  metrics.rs  policy.rs  router.rs
crates/rucket-api/src/auth/: mod.rs  sigv4.rs
crates/rucket-api/src/handlers/: admin.rs  bucket.rs  logging.rs  minio.rs  mod.rs  multipart.rs  object.rs  post_object.rs  replication.rs  website.rs
crates/rucket-api/src/handlers/object/: acl.rs  common.rs  crud.rs  list.rs  mod.rs  retention.rs  sse_c.rs  tagging.rs
crates/rucket-api/src/middleware/: mod.rs
crates/rucket-api/src/xml/: mod.rs  request.rs  response.rs
crates/rucket-cluster/: Cargo.toml
crates/rucket-cluster/src/: heartbeat.rs  lib.rs  phi_detector.rs  rebalance.rs
crates/rucket-cluster/src/rebalance/: config.rs  events.rs  mod.rs  task.rs  traits.rs
crates/rucket-cluster/src/repair/: mod.rs
crates/rucket-cluster/src/scrub/: mod.rs
crates/rucket-cluster/tests/: integration.rs
crates/rucket-consensus/: Cargo.toml  build.rs
crates/rucket-consensus/proto/: raft.proto
crates/rucket-consensus/src/: backend.rs  cluster.rs  command.rs  config.rs  lib.rs  response.rs  types.rs
crates/rucket-consensus/src/discovery/: cloud.rs  dns.rs  manager.rs  mod.rs  static_peers.rs
crates/rucket-consensus/src/log_storage/: mod.rs  redb_log.rs
crates/rucket-consensus/src/network/: grpc_network.rs  mod.rs
crates/rucket-consensus/src/state_machine/: metadata_sm.rs  mod.rs
crates/rucket-consensus/src/testing/: chaos.rs  chaos_network.rs  linearizability.rs  mod.rs
crates/rucket-consensus/tests/: chaos_integration_tests.rs  chaos_tests.rs  cloud_discovery_tests.rs  cluster_integration.rs  simulation_tests.rs
crates/rucket-core/: Cargo.toml
crates/rucket-core/src/: config.rs  encryption.rs  error.rs  hlc.rs  lib.rs  lifecycle.rs  policy.rs  public_access_block.rs  replication.rs  types.rs
crates/rucket-erasure/: Cargo.toml
crates/rucket-erasure/src/: codec.rs  config.rs  error.rs  lib.rs  shard.rs
crates/rucket-erasure/tests/: integration.rs
crates/rucket-geo/: Cargo.toml
crates/rucket-geo/src/: config.rs  conflict.rs  error.rs  lib.rs  placement.rs  region.rs  stream.rs  types.rs
crates/rucket-placement/: Cargo.toml
crates/rucket-placement/src/: bucket.rs  cluster_map.rs  crush.rs  hash.rs  lib.rs  rule.rs
crates/rucket-replication/: Cargo.toml
crates/rucket-replication/src/: async_replicator.rs  config.rs  error.rs  lag.rs  level.rs  lib.rs  replicator.rs  sync_replicator.rs
crates/rucket-replication/tests/: integration.rs
crates/rucket-storage/: Cargo.toml
crates/rucket-storage/src/: backend.rs  batch.rs  crypto.rs  direct_io.rs  erasure.rs  events.rs  lib.rs  local.rs  metrics.rs  placement.rs  replicated.rs  streaming.rs  sync.rs  sync_durability_tests.rs
crates/rucket-storage/src/metadata/: backend.rs  mod.rs  redb_backend.rs
crates/rucket-storage/src/wal/: durability_tests.rs  entry.rs  mod.rs  reader.rs  recovery.rs  writer.rs
crates/rucket/benches/: throughput.rs
crates/rucket/src/: cli.rs  cluster_cli.rs  main.rs
crates/rucket/tests/: integration.rs  s3_compat.rs  tls.rs
crates/rucket/tests/s3_compat/: harness.rs
crates/rucket/tests/s3_compat/access_control/: mod.rs  permissions.rs
crates/rucket/tests/s3_compat/anonymous/: mod.rs
crates/rucket/tests/s3_compat/atomic/: concurrent.rs  mod.rs
crates/rucket/tests/s3_compat/bucket/: acl.rs  cors.rs  create.rs  delete.rs  encryption.rs  head.rs  lifecycle.rs  list.rs  logging.rs  mod.rs  notification.rs  policy.rs  replication.rs  tagging.rs  versioning.rs  website.rs
crates/rucket/tests/s3_compat/checksum/: mod.rs
crates/rucket/tests/s3_compat/conditional/: if_match.rs  if_modified.rs  if_none_match.rs  mod.rs
crates/rucket/tests/s3_compat/delete_multiple/: batch.rs  mod.rs
crates/rucket/tests/s3_compat/encryption/: mod.rs  sse_c.rs  sse_kms.rs  sse_s3.rs
crates/rucket/tests/s3_compat/iam/: mod.rs
crates/rucket/tests/s3_compat/list/: delimiter.rs  mod.rs  objects_v1.rs  objects_v2.rs  versions.rs
crates/rucket/tests/s3_compat/multipart/: abort.rs  complete.rs  copy.rs  list.rs  mod.rs  upload.rs
crates/rucket/tests/s3_compat/object/: acl.rs  attributes.rs  copy.rs  delete.rs  get.rs  head.rs  legal_hold.rs  lock.rs  metadata.rs  mod.rs  put.rs  restore.rs  retention.rs  tagging.rs
crates/rucket/tests/s3_compat/post_object/: form.rs  mod.rs
crates/rucket/tests/s3_compat/presigned/: get.rs  mod.rs  post.rs  put.rs
crates/rucket/tests/s3_compat/range/: mod.rs  requests.rs
crates/rucket/tests/s3_compat/select/: csv.rs  json.rs  mod.rs
crates/rucket/tests/s3_compat/storage_class/: mod.rs
crates/rucket/tests/s3_compat/sts/: mod.rs
crates/rucket/tests/s3_compat/versioning/: delete.rs  get.rs  markers.rs  mod.rs  put.rs
docs/: DURABILITY.md  ROADMAP.md  VISION.md  architecture.md  configuration.md  deployment.md  s3-compatibility.md
docs/benchmarks/: README.md
docs/deployment/: docker.md  systemd.md
docs/operations/: backup-restore.md  monitoring.md
docs/performance/: tuning.md
docs/security/: hardening.md
docs/troubleshooting/: common-issues.md
examples/: rucket.toml
scripts/: check-license-headers.sh  coverage.sh  run-benchmarks.sh  s3-compat-tests.sh
scripts/s3-compat/: Dockerfile.ceph  Dockerfile.minio  ceph-entrypoint.sh  ceph-runner.sh  minio-runner.sh  mint-runner.sh
tests/common/: mod.rs
tests/integration/: basic_ops.rs
tests/terraform/: .gitignore  README.md  provider.tf  (+11 more)
(+2 files in other folders)
