[workspace]
resolver = "2"
members = [
    "crates/rucket",
    "crates/rucket-core",
    "crates/rucket-api",
    "crates/rucket-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0"
repository = "https://github.com/rucketdev/rucket"
homepage = "https://github.com/rucketdev/rucket"
authors = ["The Rucket Authors"]

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Internal crates
rucket-core = { path = "crates/rucket-core" }
rucket-api = { path = "crates/rucket-api" }
rucket-storage = { path = "crates/rucket-storage" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", features = ["ring"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"

# TLS
rustls-pemfile = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
toml = "0.8"

# Database
redb = "3.1"
bincode = "1.3"

# Async utilities
async-trait = "0.1"

# Concurrency
dashmap = "6.1"

# Crypto
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
crc32fast = "1.5"
crc32c = "0.6"

# System
libc = "0.2"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
percent-encoding = "2.3"
base64 = "0.22"
url = "2.5"

# Config and CLI
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"

# Testing
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
tempfile = "3.14"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
rand = "0.8"
rcgen = "0.13"
reqwest = { version = "0.12", features = ["rustls-tls", "native-tls-vendored"] }

# Benchmarking
criterion = { version = "0.8", features = ["async_tokio"] }

# Graphing and utilities
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
walkdir = "2.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
