# Copyright 2024 The Rucket Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rucket-api"
description = "S3 API implementation for Rucket object storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rucket-core.workspace = true
rucket-storage.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http.workspace = true
bytes.workspace = true
tokio.workspace = true

serde = { workspace = true }
serde_json.workspace = true
quick-xml.workspace = true

hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
percent-encoding.workspace = true
url.workspace = true

uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
