[package]
name = "rucket-core"
description = "Core types and utilities for Rucket object storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
toml.workspace = true
figment.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
http.workspace = true
base64.workspace = true
