[package]
name = "rucket-erasure"
description = "Reed-Solomon erasure coding for Rucket distributed storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["erasure-coding", "reed-solomon"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
reed-solomon-erasure.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
