[package]
name = "rucket-geo"
description = "Cross-region replication for Rucket object storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rucket-core.workspace = true
rucket-storage.workspace = true
rucket-replication.workspace = true
rucket-placement.workspace = true

tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
