[package]
name = "rucket-placement"
description = "CRUSH algorithm for deterministic data placement in Rucket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
siphasher = "1.0"
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
