# Copyright 2024 The Rucket Authors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rucket-storage"
description = "Storage backend for Rucket object storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rucket-core.workspace = true

tokio.workspace = true
redb.workspace = true
bincode.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
md-5.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
