[package]
name = "rucket-storage"
description = "Storage backend for Rucket object storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
bench = ["libc"]

[dependencies]
rucket-core.workspace = true
rucket-placement.workspace = true

tokio.workspace = true
redb.workspace = true
bincode.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
md-5.workspace = true
hex.workspace = true
crc32fast.workspace = true
crc32c.workspace = true
sha1.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
zeroize.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = { workspace = true, optional = true }
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
proptest.workspace = true
